--- a/phase2/Introduction_ML/Basics of Neural Networks/A basic feedforward neural network.ipynb
+++ b/phase2/Introduction_ML/Basics of Neural Networks/A basic feedforward neural network.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "executionInfo": {
      "elapsed": 15290,
@@ -32,12 +32,13 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from sklearn.datasets import load_breast_cancer\n",
-    "from rich import print"
+    "from rich import print\n",
+    "#from torch.utils.tensorboard import SummaryWriter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "executionInfo": {
      "elapsed": 87,
